--- a/style.css
+++ b/style.css
@@ -2,20 +2,20 @@ body{
     display: flex;
     justify-content: center;
     padding-top: 100px;
-    background-color: rgb(77, 76, 76);
+    background-color: rgba(44, 44, 44, 0.932);
 }
 .container{
     display: grid;
-    grid-template-columns: 200px 40px;
-    column-gap: 10px;
+    grid-template-columns: 220px 40px;
+    column-gap: 30px;
 }
 .hour_minute_second_div{
-    /* border: 1px solid white; */
     width: 100%;
     height: 100px;
     display: grid;
     grid-template-columns:1fr 1fr 1fr;
     column-gap: 10px;
+    margin-left: 20px;
 }
 .hour{
     background-color: lightcoral;
@@ -52,7 +52,7 @@ div{
     margin-top: 65px;
 }
 .buttons_div{
-    width: 200px;
+    width: 300px;
     margin-top: 50px;
     display: flex;
     justify-content: space-around;
